package razEini_razYacobi;

import java.io.Serializable;
import java.util.ArrayList;
import razEini_razYacobi.Lecturer.Degree;

public class Administrative implements Serializable {
    private ArrayList<Lecturer> lecturers;
    private ArrayList<Department> departments;
    public ArrayList<Committee> committees;
    private final String collegeName;

    public Administrative(String collegeName) {
        this.collegeName = collegeName;
        this.lecturers = new ArrayList<>();
        this.departments = new ArrayList<>();
        this.committees = new ArrayList<>();
    }

    public String getCollegeName() { return this.collegeName; }

    public boolean isLecturerExists(String name) {
        for (Lecturer l : lecturers) {
            if (l.getName().equalsIgnoreCase(name)) return true;
        }
        return false;
    }

    public boolean isLecturersIdExists(String id) {
        for (Lecturer l : lecturers) {
            if (l.getId().equalsIgnoreCase(id)) return true;
        }
        return false;
    }

    public Degree getDegree(String degree) throws AdministrativeException {
        for (int i = 0; i < Degree.values().length; i++){
            String d = Degree.values()[i].name();
            if (d.contains(String.valueOf("_"))){
                degree = degree.toUpperCase().replace(" ", "_");
            }
            if (Degree.values()[i].name().toLowerCase().equalsIgnoreCase(degree)) return Degree.values()[i];
        }

        throw new AdministrativeException("Degree not found");
    }

    public static boolean isValidID(String idStr) {
        return idStr != null && idStr.length() == 9;
    }

    public void addLecturer(String name, String id, String degreeStr, int salary, String institution) throws AdministrativeException {
        Degree degree = Degree.BACHELOR_DEGREE;
        String upper = degreeStr.toUpperCase().replace(" ", "_");
        for (Degree d : Degree.values()) {
            if (d.name().equals(upper)) {
                degree = d;
                break;
            }
        }

        Lecturer l;
        if (degree == Degree.PROFESSOR) {
            l = new Professor(name, id, salary, null, degree, institution);
        } else if (degree == Degree.DR) {
            l = new Doctor(name, id, salary, null, degree);
        } else {
            l = new Lecturer(name, id, salary, null, degree);
        }

        lecturers.add(l);
    }

    public Lecturer findLecturerByName(String name) {
        for (Lecturer l : lecturers) {
            if (l.getName().equalsIgnoreCase(name)) return l;
        }
        return null;
    }

    public Committee findCommitteeByName(String name) {
        for (Committee c : committees) {
            if (c.getCommitteeName().equalsIgnoreCase(name)) return c;
        }
        return null;
    }

    public double getAverageSalary() {
        if (lecturers.isEmpty()) return 0;
        double sum = 0;
        for (Lecturer l : lecturers) sum += l.getSalary();
        return sum / lecturers.size();
    }

    public double getAverageSalaryByDepartment(String department) {
        double sum = 0;
        int countInDepartment = 0;
        for (Lecturer l : lecturers) {
            if (l.getDepartment() != null && l.getDepartment().getDepartmentName().equalsIgnoreCase(department)) {
                sum += l.getSalary();
                countInDepartment++;
            }
        }
        if (countInDepartment == 0) return 0;
        return sum / countInDepartment;
    }

    public String getAllLecturersFullData() throws AdministrativeException {
        if (lecturers.isEmpty()) throw new AdministrativeException("No lecturers registered.");
        String result = "";
        for (Lecturer l : lecturers) {
            result += (l.toString() + "\n\n");
        }
        return result;
    }

    public String getAllCommitteesFullData() throws AdministrativeException {
        if (committees.isEmpty()) throw new AdministrativeException("No committees registered.");
        String result = "";
        for (Committee c : committees) {
            result += c.toString() + "\n";
        }
        return result;
    }

    public boolean isCommitteeExists(String name) {
        for (Committee c : committees) {
            if (c.getCommitteeName().equalsIgnoreCase(name)) return true;
        }
        return false;
    }

    public void addCommittee(Committee c) throws AdministrativeException {
        if (c == null) throw new AdministrativeException("Committee cannot be null.");

        if (!c.getCommitteeName().startsWith("new-")) {
            if (c.getChairman() != null && ChairmanExists(c.getChairman())) {
                throw new AdministrativeException("Error: Cannot add committee '" + c.getCommitteeName() +
                        "' because " + c.getChairman().getName() + " is already chairman of another committee.");
            }
        }

        committees.add(c);
    }

    public void addLecturerToCommittee(String committeeName, String lecturerName) throws AdministrativeException {
        Committee targetCommittee = findCommitteeByName(committeeName);
        Lecturer l = findLecturerByName(lecturerName);

        if (targetCommittee == null && l == null) {
            throw new AdministrativeException("Error: Both committee \"" + committeeName + "\" and lecturer \"" + lecturerName + "\" do not exist.");
        } else if (targetCommittee == null) {
            throw new AdministrativeException("Error: Committee \"" + committeeName + "\" does not exist.");
        } else if (l == null) {
            throw new AdministrativeException("Error: Lecturer \"" + lecturerName + "\" does not exist.");
        }

        if (targetCommittee.getChairman() != null && targetCommittee.getChairman().getName().equalsIgnoreCase(lecturerName)) {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " is already the chairman of this committee.");
        }

        if (targetCommittee.isLecturerExists(lecturerName)) {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " already exists in this committee.");
        }

        targetCommittee.addLecturer(l);
        l.addCommittee(targetCommittee);
    }

    public void deleteLecturerFromCommittee(String committeeName, String lecturerName) throws AdministrativeException {
        Committee targetCommittee = findCommitteeByName(committeeName);
        Lecturer l = findLecturerByName(lecturerName);

        if (targetCommittee == null && l == null) {
            throw new AdministrativeException("Error: Both committee \"" + committeeName + "\" and lecturer \"" + lecturerName + "\" do not exist.");
        } else if (targetCommittee == null) {
            throw new AdministrativeException("Error: Committee \"" + committeeName + "\" does not exist.");
        } else if (l == null) {
            throw new AdministrativeException("Error: Lecturer \"" + lecturerName + "\" does not exist.");
        }

        if (targetCommittee.getChairman() != null && targetCommittee.getChairman().getName().equalsIgnoreCase(lecturerName)) {
            throw new AdministrativeException("Error: Cannot remove " + lecturerName + " because they are the Chairman of " + committeeName + ".");
        }

        if (targetCommittee.isLecturerExists(lecturerName)) {
            targetCommittee.deleteLecturer(l);
            l.removeCommittee(committeeName);
        } else {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " is not a member of committee " + committeeName + ".");
        }
    }

    public boolean ChairmanExists(Lecturer l) {
        if (l == null || l.getName() == null) return false;
        for (Committee committee : committees) {
            Lecturer currentChair = committee.getChairman();
            if (currentChair != null && currentChair.getName() != null &&
                    currentChair.getName().equalsIgnoreCase(l.getName())) {
                return true;
            }
        }
        return false;
    }

    public void updateChairmanCommittee(String committeeName, String chairmanName) throws AdministrativeException {
        Lecturer newChairman = findLecturerByName(chairmanName);
        if (newChairman == null) {
            throw new AdministrativeException("Error: Lecturer " + chairmanName + " does not exist.");
        }

        if (ChairmanExists(newChairman)) {
            throw new AdministrativeException("Error: Lecturer " + chairmanName + " is already chairman of a committee.");
        }

        Committee targetCommittee = findCommitteeByName(committeeName);
        if (targetCommittee == null) {
            throw new AdministrativeException("Error: Committee " + committeeName + " does not exist.");
        }

        Degree degree = newChairman.getDegree();
        if (degree == Degree.DR || degree == Degree.PROFESSOR) {
            if (targetCommittee.isLecturerExists(chairmanName)) {
                targetCommittee.deleteLecturer(newChairman);
                newChairman.removeCommittee(committeeName);
            }

            Lecturer originalOldChairman = targetCommittee.getChairman();
            if (originalOldChairman != null) {
                originalOldChairman.removeCommittee(committeeName);
            }

            targetCommittee.setChairman(newChairman);
        } else {
            throw new AdministrativeException("Error: Lecturer " + chairmanName + " cannot be a chairman because they are not a DR or PROFESSOR.");
        }
    }

    public boolean isDepartmentExists(String departmentName) {
        for (Department dept : departments) {
            if (dept.getDepartmentName().equalsIgnoreCase(departmentName)) {
                return true;
            }
        }
        return false;
    }

    public void AddDepartment(Department department) throws AdministrativeException {
        if (department == null) throw new AdministrativeException("Error: Department cannot be null.");
        if (isDepartmentExists(department.getDepartmentName())) throw new AdministrativeException("Error: Department '" + department.getDepartmentName() + "' already exists.");

        departments.add(department);
    }

    public void addLecturerToDepartment(String departmentName, String lecturerName) throws AdministrativeException {
        Lecturer l = findLecturerByName(lecturerName);
        if (l == null) {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " does not exist.");
        }

        Department targetDept = null;
        for (Department dept : departments) {
            if (dept.getDepartmentName().equalsIgnoreCase(departmentName)) {
                targetDept = dept;
                break;
            }
        }

        if (targetDept == null) {
            throw new AdministrativeException("Error: Department " + departmentName + " does not exist.");
        }

        if (targetDept.isLecturerExists(lecturerName)) {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " already exists in this department.");
        }

        if (l.getDepartment() != null) {
            throw new AdministrativeException("Error: Lecturer " + lecturerName + " already belongs to another department: "
                    + l.getDepartment().getDepartmentName());
        }

        targetDept.addLecturer(l);
        l.setDepartment(targetDept);
    }

    public void addArticleToLecturer(String name, String article) throws AdministrativeException {
        Lecturer l = findLecturerByName(name);
        if (l == null) {
            throw new AdministrativeException("Error: Lecturer " + name + " does not exist.");
        }

        if (l instanceof Doctor) {
            ((Doctor) l).addArticles(article);
        } else {
            throw new AdministrativeException("Error: Lecturer " + name + " is not DR or PROFESSOR. Cannot add articles.");
        }
    }

    @Override
    public boolean equals(Object obj) {
        if (this == obj) return true;
        if (obj == null || getClass() != obj.getClass()) return false;
        Administrative other = (Administrative) obj;
        if (collegeName == null) {
            return other.collegeName == null;
        }
        return collegeName.equals(other.collegeName);
    }

    @Override
    public String toString() {
        return "Administrative{collegeName='" + collegeName + "', lecturers=" + lecturers.size() +
                ", departments=" + departments.size() + ", committees=" + committees.size() + "}";
    }
}