package razEini_razYacobi;

public class GoBackException extends Exception {
    public GoBackException() {
        super();
    }
}