@startuml
 ' Updated Class diagram reflecting source code
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam backgroundColor white
skinparam ArrowColor #444444
skinparam ClassBorderColor #444444
skinparam ClassBackgroundColor #F9F9F9
skinparam EnumBackgroundColor #FFF7D6
skinparam EnumBorderColor #B38F00
skinparam PackageBorderColor #888888

class Administrative {
  - lecturers : java.util.ArrayList<Lecturer>
  - departments : java.util.ArrayList<Department>
  + committees : java.util.ArrayList<Committee>
  - collegeName : String {readOnly}
  .. operations ..
  + Administrative(collegeName : String)
  + getCollegeName() : String
  + isLecturerExists(name : String) : boolean
  + isLecturersIdExists(id : String) : boolean
  + getDegree(degree : String) : Lecturer.Degree
  + {static} isValidID(idStr : String) : boolean
  + addLecturer(name : String, id : String, degreeStr : String, salary : int, institution : String) : void
  + findLecturerByName(name : String) : Lecturer
  + findCommitteeByName(name : String) : Committee
  + getAverageSalary() : double
  + getAverageSalaryByDepartment(department : String) : double
  + getAllLecturersFullData() : String
  + getAllCommitteesFullData() : String
  + isCommitteeExists(name : String) : boolean
  + addCommittee(c : Committee) : void
  + addLecturerToCommittee(committeeName : String, lecturerName : String) : void
  + deleteLecturerFromCommittee(committeeName : String, lecturerName : String) : void
  + ChairmanExists(l : Lecturer) : boolean
  + updateChairmanCommittee(committeeName : String, chairmanName : String) : void
  + isDepartmentExists(departmentName : String) : boolean
  + AddDepartment(department : Department) : void
  + addLecturerToDepartment(departmentName : String, lecturerName : String) : void
  + addArticleToLecturer(name : String, article : String) : void
}

class AdministrativeException {
  + AdministrativeException(message : String)
}

class Committee<T extends Lecturer.Degree> {
  - committee_name : String
  - lecturers_Array : java.util.ArrayList<Lecturer>
  - chairman : Lecturer
  - compareMode : int
  - committeeDegree : T
  .. operations ..
  + Committee(degree : T)
  + Committee(name : String, lecturers : Lecturer[], chairman : Lecturer, degree : T)
  + Committee(other : Committee<T>, isClone : boolean)
  + getChairman() : Lecturer
  + getCommitteeName() : String
  + setCommitteeName(name : String) : void
  + setLecturers(lecturers : Lecturer[]) : void
  + setChairman(chairman : Lecturer) : void
  + setCompareMode(compareMode : int) : void
  + isLecturerExists(lecturerName : String) : boolean
  + addLecturer(lecturer : Lecturer) : void
  + deleteLecturer(lecturer : Lecturer) : void
  + sumOfArticles() : int
  + compareTo(o : Committee) : int
  + clone() : Committee<T>
  + equals(obj : Object) : boolean
  + toString() : String
}

class Department {
  - department_name : String
  - student_count : int
  - lecturers_Array : java.util.ArrayList<Lecturer>
  .. operations ..
  + Department()
  + Department(department_name : String, student_count : int)
  + Department(other : Department)
  + getDepartmentName() : String
  + getLecturers() : Lecturer[]
  + setDepartmentName(department_name : String) : void
  + setStudentCount(student_count : int) : void
  + setLecturers(lecturers_Array : Lecturer[]) : void
  + addLecturer(lecturer : Lecturer) : void
  + isLecturerExists(lecturerName : String) : boolean
  + equals(obj : Object) : boolean
  + toString() : String
}

class Lecturer {
  - lecturer_name : String
  - lecturer_id : String
  - salary : int
  - department : Department
  - myCommittees : java.util.ArrayList<Committee>
  - lecturerDegree : Lecturer.Degree
  .. operations ..
  + Lecturer()
  + Lecturer(name : String, id : String, salary : int, department : Department, degree : Lecturer.Degree)
  + Lecturer(other : Lecturer)
  + addCommittee(c : Committee) : void
  + getName() : String
  + getId() : String
  + getDegree() : Lecturer.Degree
  + getSalary() : int
  + getDepartment() : Department
  + setName(name : String) : void
  + setSalary(salary : int) : void
  + setDepartment(department : Department) : void
  + setId(id : String) : void
  + removeCommittee(committeeName : String) : void
  + compareTo(other : Lecturer) : int
  + equals(obj : Object) : boolean
  + toString() : String
}

enum "Lecturer.Degree" as LecturerDegree {
  BACHELOR_DEGREE
  MASTER_DEGREE
  DR
  PROFESSOR
}

class Doctor {
  - articles : String[]
  - artCount : int
  .. operations ..
  + Doctor()
  + Doctor(name : String, id : String, salary : int, department : Department, degree : Lecturer.Degree)
  + Doctor(other : Doctor)
  + addArticles(article : String) : void
  + getNumOfArticles() : int
  + toString() : String
}

class Professor {
  - institution : String
  .. operations ..
  + Professor()
  + Professor(name : String, id : String, salary : int, department : Department, degree : Lecturer.Degree, institution : String)
  + Professor(other : Professor)
  + setInstitution(institution : String) : void
  + getInstitution() : String
  + toString() : String
}

class Main {
  - {static} scanner : java.util.Scanner
  - {static} FILE_NAME : String = "college_data.dat"
  .. operations ..
  - {static} saveSerialization(administrative : Administrative, fileName : String) : void
  - {static} loadSerialization(fileName : String) : Administrative
  + {static} main(args : String[]) : void
}

class InputHelper {
  - {static} scanner : java.util.Scanner
  + {static} readLine() : String <<throws GoBackException>>
  + {static} closeScanner() : void
}

class GoBackException {
  + GoBackException()
}

AdministrativeException --|> Exception
Doctor --|> Lecturer
Professor --|> Doctor
Committee ..|> Comparable
Committee ..|> Cloneable
Lecturer ..|> Comparable
Lecturer --> LecturerDegree : lecturerDegree
Lecturer --> Department : department
Lecturer --> "0..*" Committee : myCommittees
Department o-- "0..*" Lecturer : lecturers_Array
Committee o-- "0..*" Lecturer : lecturers_Array
Committee --> "1" Lecturer : chairman
Administrative o-- "0..*" Lecturer : lecturers
Administrative o-- "0..*" Department : departments
Administrative o-- "0..*" Committee : committees
Main ..> Administrative
Main ..> InputHelper
InputHelper ..> GoBackException
GoBackException --|> Exception

note right of Committee
  Committee is generic: Committee<T extends Lecturer.Degree>
  Constructors and setLecturers enforce matching committeeDegree.
  clone() prefixes the new committee name with "new-" and deep-copies members using copy ctors.
end note

note right of Administrative
  The implementation uses java.util.ArrayList for collections (not arrays).
end note

@enduml